--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   --main-theme: 78 116 238;
   --second-theme: 67 69 77;
   --width-pbox : 0%;
+  --height-pbox : 0%;
   scroll-behavior: smooth
 }
 
@@ -597,20 +598,12 @@ h1, h2, h3, h4, h5, h6{
   padding-bottom: 0.75rem
 }
 
-.absolute{
-  position: absolute
-}
-
 .relative{
   position: relative
 }
 
 .sticky{
   position: sticky
-}
-
-.bottom-0{
-  bottom: 0px
 }
 
 .left-0{
@@ -691,6 +684,14 @@ h1, h2, h3, h4, h5, h6{
   display: none
 }
 
+.aspect-\[48\/61\]{
+  aspect-ratio: 48/61
+}
+
+.h-17{
+  height: 4.25rem
+}
+
 .h-5{
   height: 1.25rem
 }
@@ -699,17 +700,13 @@ h1, h2, h3, h4, h5, h6{
   height: 2.25rem
 }
 
-.h-\[95dvh\]{
-  height: 95dvh
+.h-\[97dvh\]{
+  height: 97dvh
 }
 
 .h-max{
   height: -moz-max-content;
   height: max-content
-}
-
-.h-17{
-  height: 4.25rem
 }
 
 .w-5{
@@ -718,6 +715,10 @@ h1, h2, h3, h4, h5, h6{
 
 .w-9{
   width: 2.25rem
+}
+
+.w-auto{
+  width: auto
 }
 
 .w-dvw{
@@ -733,8 +734,16 @@ h1, h2, h3, h4, h5, h6{
   width: 100%
 }
 
+.min-w-17{
+  min-width: 4.25rem
+}
+
 .max-w-17{
   max-width: 4.25rem
+}
+
+.max-w-\[100dvw\]{
+  max-width: 100dvw
 }
 
 .flex-none{
@@ -829,12 +838,24 @@ h1, h2, h3, h4, h5, h6{
   scroll-margin-top: 5rem
 }
 
-.grid-cols-\[min-content_max-content\]{
-  grid-template-columns: min-content max-content
+.grid-cols-\[88px_min-content\]{
+  grid-template-columns: 88px min-content
+}
+
+.grid-cols-\[88px_1fr\]{
+  grid-template-columns: 88px 1fr
 }
 
 .grid-rows-\[min-content_max-content_min-content_1fr\]{
   grid-template-rows: min-content max-content min-content 1fr
+}
+
+.grid-rows-\[repeat\(2_\2c max-content\)\]{
+  grid-template-rows: repeat(2 ,max-content)
+}
+
+.grid-rows-\[repeat\(2_\2c 1fr\)\]{
+  grid-template-rows: repeat(2 ,1fr)
 }
 
 .flex-col{
@@ -869,16 +890,16 @@ h1, h2, h3, h4, h5, h6{
   gap: 1.25rem
 }
 
-.place-self-end{
-  place-self: end
-}
-
 .place-self-center{
   place-self: center
 }
 
 .overflow-x-hidden{
   overflow-x: hidden
+}
+
+.text-wrap{
+  text-wrap: wrap
 }
 
 .break-words{
@@ -997,6 +1018,16 @@ h1, h2, h3, h4, h5, h6{
   display: block
 }
 
+.after\:h-\[calc\(var\(--height-pbox\)-5\.5rem\)\]::after{
+  content: var(--tw-content);
+  height: calc(var(--height-pbox) - 5.5rem)
+}
+
+.after\:w-\[calc\(var\(--width-pbox\)\+\.75rem\)\]::after{
+  content: var(--tw-content);
+  width: calc(var(--width-pbox) + .75rem)
+}
+
 @keyframes slide-f-br{
   0%{
     content: var(--tw-content);
@@ -1023,81 +1054,6 @@ h1, h2, h3, h4, h5, h6{
   content: var(--tw-content);
   --tw-bg-opacity: 1;
   background-color: rgb(14 165 233 / var(--tw-bg-opacity, 1))
-}
-
-@media (max-width: 630px){
-  .max-\[630px\]\:w-\[95dvw\]{
-    width: 95dvw
-  }
-}
-
-@media not all and (min-width: 546px){
-  .max-xs\:overflow-x-hidden{
-    overflow-x: hidden
-  }
-
-  .max-xs\:after\:w-\[calc\(var\(--width-pbox\)\+\.75rem\)\]::after{
-    content: var(--tw-content);
-    width: calc(var(--width-pbox) + .75rem)
-  }
-}
-
-@media (max-width: 546px){
-  .max-\[546px\]\:-right-7{
-    right: -1.75rem
-  }
-}
-
-@media (max-width: 395px){
-  .max-\[395px\]\:after\:h-\[56\%\]::after{
-    content: var(--tw-content);
-    height: 56%
-  }
-}
-
-@media (min-width: 396px){
-  .xxs\:h-\[65dvh\]{
-    height: 65dvh
-  }
-
-  .xxs\:after\:h-\[55dvh\]::after{
-    content: var(--tw-content);
-    height: 55dvh
-  }
-}
-
-@media (min-width: 546px){
-  .xs\:static{
-    position: static
-  }
-
-  .xs\:mb-5{
-    margin-bottom: 1.25rem
-  }
-
-  .xs\:w-full{
-    width: 100%
-  }
-
-  .xs\:text-5xl{
-    font-size: 3rem;
-    line-height: 1
-  }
-
-  .xs\:text-6xl{
-    font-size: 3.75rem;
-    line-height: 1
-  }
-
-  .xs\:text-lg{
-    font-size: 1.125rem;
-    line-height: 1.75rem
-  }
-
-  .xs\:after\:w-\[calc\(var\(--width-pbox\)\+\.8rem\)\]::after{
-    content: var(--tw-content);
-    width: calc(var(--width-pbox) + .8rem)
-  }
 }
 
 @media (min-width: 640px){
@@ -1206,11 +1162,6 @@ h1, h2, h3, h4, h5, h6{
     --tw-content: '-';
     content: var(--tw-content)
   }
-
-  .lg\:after\:h-\[59dvh\]::after{
-    content: var(--tw-content);
-    height: 59dvh
-  }
 }
 
 @media (min-width: 1280px){
@@ -1223,6 +1174,77 @@ h1, h2, h3, h4, h5, h6{
 @media (min-width: 1536px){
   .\32xl\:mt-28{
     margin-top: 7rem
+  }
+}
+
+@media (min-width: 396px){
+  .xxs\:h-\[65dvh\]{
+    height: 65dvh
+  }
+}
+
+@media (min-width: 546px){
+  .xs\:static{
+    position: static
+  }
+
+  .xs\:mb-5{
+    margin-bottom: 1.25rem
+  }
+
+  .xs\:w-full{
+    width: 100%
+  }
+
+  .xs\:text-5xl{
+    font-size: 3rem;
+    line-height: 1
+  }
+
+  .xs\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1
+  }
+
+  .xs\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem
+  }
+}
+
+@media ((min-height: 872px) and (max-width: 1024px)){
+  .mbl-lg\:col-start-auto{
+    grid-column-start: auto
+  }
+
+  .mbl-lg\:row-span-1{
+    grid-row: span 1 / span 1
+  }
+
+  .mbl-lg\:row-start-auto{
+    grid-row-start: auto
+  }
+
+  .mbl-lg\:grid-flow-row{
+    grid-auto-flow: row
+  }
+
+  .mbl-lg\:grid-cols-none{
+    grid-template-columns: none
+  }
+
+  .mbl-lg\:grid-rows-\[min-content_max-content_min-content_1fr\]{
+    grid-template-rows: min-content max-content min-content 1fr
+  }
+}
+
+@media (orientation: portrait){
+  .portrait\:h-auto{
+    height: auto
+  }
+
+  .portrait\:w-\[90dvw\]{
+    width: 90dvw
   }
 }
 
