--- a/tailwindcss/input.css
+++ b/tailwindcss/input.css
@@ -12,7 +12,7 @@
 
 @layer base{
     body{
-        @apply font-jktsans selection:bg-yellow-400/70 box-border
+        @apply font-jktsans selection:bg-yellow-400/70 box-border;
     }
     h1, h2, h3, h4, h5, h6{
         @apply font-bold;
@@ -20,7 +20,19 @@
 }
 
 @layer components{
+    .main-section{
+        @apply mt-20 px-4 lg:px-6 2xl:mt-28 scroll-m-16 max-w-[100dvw];
+    }
     .card{
-        @apply bg-gray-200 w-full px-4 py-3 rounded-lg
+        @apply bg-gray-200 w-full rounded-lg;
+    }
+    h2.section-title{
+        @apply text-2xl xs:text-4xl md:text-5xl mb-2 xs:mb-5;
+    }
+    .hamburger-btn{
+        @apply h-fit w-fit [&>*]:block [&>*]:my-[.319rem] [&>*]:border-b-[2.8px] [&>*]:w-5 [&>*]:border-slate-950 scale-125 [&>*]:rounded-sm [&>*]:transition-all [&>*]:duration-500 overflow-hidden;
+    }
+    .hamburger-btn-clicked{
+        @apply [&>span:first-child]:rotate-45 [&>span:first-child]:translate-y-[.37rem] [&>span:nth-child(2)]:translate-x-[100%] [&>span:nth-child(2)]:opacity-0 [&>span:last-child]:-rotate-45 [&>span:last-child]:-translate-y-[.5rem];
     }
 }
