--- a/css/style.css
+++ b/css/style.css
@@ -587,96 +587,15 @@ h1, h2, h3, h4, h5, h6{
   font-weight: 700
 }
 
-.main-section{
-  margin-top: 5rem;
-  max-width: 100dvw;
-  scroll-margin: 4rem;
-  padding-left: 1rem;
-  padding-right: 1rem
-}
-
-@media (min-width: 1024px){
-  .main-section{
-    padding-left: 1.5rem;
-    padding-right: 1.5rem
-  }
-}
-
-@media (min-width: 1536px){
-  .main-section{
-    margin-top: 7rem
-  }
-}
-
 .card{
   width: 100%;
   border-radius: 0.5rem;
   --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1))
-}
-
-h2.section-title{
-  margin-bottom: 0.5rem;
-  font-size: 1.5rem;
-  line-height: 2rem
-}
-
-@media (min-width: 768px){
-  h2.section-title{
-    font-size: 3rem;
-    line-height: 1
-  }
-}
-
-@media ((min-width: 546px) and (max-width: 640px)){
-  h2.section-title{
-    margin-bottom: 1.25rem;
-    font-size: 2.25rem;
-    line-height: 2.5rem
-  }
-}
-
-.hamburger-btn{
-  height: -moz-fit-content;
-  height: fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  overflow: hidden
-}
-
-.hamburger-btn>*{
-  margin-top: .319rem;
-  margin-bottom: .319rem;
-  display: block;
-  width: 1.25rem;
-  border-radius: 0.125rem;
-  border-bottom-width: 2.8px;
-  --tw-border-opacity: 1;
-  border-color: rgb(2 6 23 / var(--tw-border-opacity, 1));
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 500ms
-}
-
-.hamburger-btn-clicked>span:first-child{
-  --tw-translate-y: .37rem;
-  --tw-rotate: 45deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
-}
-
-.hamburger-btn-clicked>span:last-child{
-  --tw-translate-y: -.5rem;
-  --tw-rotate: -45deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
-}
-
-.hamburger-btn-clicked>span:nth-child(2){
-  --tw-translate-x: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  opacity: 0
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem
 }
 
 .relative{
@@ -724,40 +643,25 @@ h2.section-title{
   margin-right: auto
 }
 
+.my-96{
+  margin-top: 24rem;
+  margin-bottom: 24rem
+}
+
 .mb-2{
   margin-bottom: 0.5rem
-}
-
-.mb-3{
-  margin-bottom: 0.75rem
-}
-
-.mr-3{
-  margin-right: 0.75rem
 }
 
 .mr-5{
   margin-right: 1.25rem
 }
 
-.mt-1{
-  margin-top: 0.25rem
-}
-
 .mt-20{
   margin-top: 5rem
 }
 
-.mt-4{
-  margin-top: 1rem
-}
-
 .mt-5{
   margin-top: 1.25rem
-}
-
-.mt-8{
-  margin-top: 2rem
 }
 
 .block{
@@ -788,10 +692,6 @@ h2.section-title{
   height: 4.25rem
 }
 
-.h-20{
-  height: 5rem
-}
-
 .h-5{
   height: 1.25rem
 }
@@ -802,10 +702,6 @@ h2.section-title{
 
 .h-\[97dvh\]{
   height: 97dvh
-}
-
-.h-auto{
-  height: auto
 }
 
 .h-max{
@@ -825,6 +721,10 @@ h2.section-title{
   width: auto
 }
 
+.w-dvw{
+  width: 100dvw
+}
+
 .w-fit{
   width: -moz-fit-content;
   width: fit-content
@@ -838,16 +738,8 @@ h2.section-title{
   min-width: 4.25rem
 }
 
-.min-w-20{
-  min-width: 5rem
-}
-
 .max-w-17{
   max-width: 4.25rem
-}
-
-.max-w-20{
-  max-width: 5rem
 }
 
 .max-w-\[100dvw\]{
@@ -946,6 +838,10 @@ h2.section-title{
   scroll-margin-top: 5rem
 }
 
+.grid-cols-\[88px_min-content\]{
+  grid-template-columns: 88px min-content
+}
+
 .grid-cols-\[88px_1fr\]{
   grid-template-columns: 88px 1fr
 }
@@ -958,12 +854,12 @@ h2.section-title{
   grid-template-rows: repeat(2 ,max-content)
 }
 
-.flex-col{
-  flex-direction: column
+.grid-rows-\[repeat\(2_\2c 1fr\)\]{
+  grid-template-rows: repeat(2 ,1fr)
 }
 
-.flex-wrap{
-  flex-wrap: wrap
+.flex-col{
+  flex-direction: column
 }
 
 .items-end{
@@ -986,10 +882,6 @@ h2.section-title{
   justify-content: space-between
 }
 
-.gap-3{
-  gap: 0.75rem
-}
-
 .gap-4{
   gap: 1rem
 }
@@ -1002,12 +894,12 @@ h2.section-title{
   place-self: center
 }
 
-.overflow-hidden{
-  overflow: hidden
-}
-
 .overflow-x-hidden{
   overflow-x: hidden
+}
+
+.text-wrap{
+  text-wrap: wrap
 }
 
 .break-words{
@@ -1018,66 +910,17 @@ h2.section-title{
   border-radius: 9999px
 }
 
-.rounded-sm{
-  border-radius: 0.125rem
-}
-
-.rounded-lg{
-  border-radius: 0.5rem
-}
-
-.rounded-xl{
-  border-radius: 0.75rem
-}
-
-.rounded-b-sm{
-  border-bottom-right-radius: 0.125rem;
-  border-bottom-left-radius: 0.125rem
-}
-
-.rounded-tl-none{
-  border-top-left-radius: 0px
-}
-
-.border-b{
-  border-bottom-width: 1px
-}
-
-.border-slate-400{
-  --tw-border-opacity: 1;
-  border-color: rgb(148 163 184 / var(--tw-border-opacity, 1))
+.rounded-b-xl{
+  border-bottom-right-radius: 0.75rem;
+  border-bottom-left-radius: 0.75rem
 }
 
 .bg-red-500\/95{
   background-color: rgb(239 68 68 / 0.95)
 }
 
-.bg-slate-200\/40{
-  background-color: rgb(226 232 240 / 0.4)
-}
-
-.bg-slate-900{
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 23 42 / var(--tw-bg-opacity, 1))
-}
-
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1))
-}
-
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1))
-}
-
-.p-2{
-  padding: 0.5rem
-}
-
-.px-1{
-  padding-left: 0.25rem;
-  padding-right: 0.25rem
+.bg-slate-500\/40{
+  background-color: rgb(100 116 139 / 0.4)
 }
 
 .px-3{
@@ -1090,38 +933,9 @@ h2.section-title{
   padding-right: 1rem
 }
 
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem
-}
-
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem
-}
-
-.pb-2{
-  padding-bottom: 0.5rem
-}
-
-.pb-3{
-  padding-bottom: 0.75rem
-}
-
-.pt-2{
-  padding-top: 0.5rem
-}
-
-.pt-5{
-  padding-top: 1.25rem
-}
-
-.text-center{
-  text-align: center
-}
-
-.font-pixelify{
-  font-family: "Pixelify Sans", sans-serif
 }
 
 .text-2xl{
@@ -1129,33 +943,14 @@ h2.section-title{
   line-height: 2rem
 }
 
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem
-}
-
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem
-}
-
-.text-\[5rem\]{
-  font-size: 5rem
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1
 }
 
 .text-base{
   font-size: 1rem;
   line-height: 1.5rem
-}
-
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem
-}
-
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem
 }
 
 .text-xl{
@@ -1167,14 +962,6 @@ h2.section-title{
   font-weight: 300
 }
 
-.font-semibold{
-  font-weight: 600
-}
-
-.tracking-wider{
-  letter-spacing: 0.05em
-}
-
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity, 1))
@@ -1183,16 +970,6 @@ h2.section-title{
 .text-red-600{
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity, 1))
-}
-
-.text-slate-50{
-  --tw-text-opacity: 1;
-  color: rgb(248 250 252 / var(--tw-text-opacity, 1))
-}
-
-.text-\[\#f03c2e\]{
-  --tw-text-opacity: 1;
-  color: rgb(240 60 46 / var(--tw-text-opacity, 1))
 }
 
 .ring-4{
@@ -1211,23 +988,6 @@ h2.section-title{
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia)
 }
 
-.\[\&\>div\]\:card>div{
-  width: 100%;
-  border-radius: 0.5rem;
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1))
-}
-
-.before\:absolute::before{
-  content: var(--tw-content);
-  position: absolute
-}
-
-.before\:inset-0::before{
-  content: var(--tw-content);
-  inset: 0px
-}
-
 .before\:inline-block::before{
   content: var(--tw-content);
   display: inline-block
@@ -1236,11 +996,6 @@ h2.section-title{
 .after\:absolute::after{
   content: var(--tw-content);
   position: absolute
-}
-
-.after\:inset-0::after{
-  content: var(--tw-content);
-  inset: 0px
 }
 
 .after\:-right-3::after{
@@ -1301,72 +1056,28 @@ h2.section-title{
   background-color: rgb(14 165 233 / var(--tw-bg-opacity, 1))
 }
 
-.hover\:bg-slate-600\/15:hover{
-  background-color: rgb(71 85 105 / 0.15)
-}
-
 @media (min-width: 640px){
-  .sm\:flex{
-    display: flex
-  }
-
-  .sm\:hidden{
-    display: none
+  .sm\:block{
+    display: block
   }
 
   .sm\:justify-self-end{
     justify-self: end
   }
-
-  .sm\:text-xl{
-    font-size: 1.25rem;
-    line-height: 1.75rem
-  }
 }
 
 @media (min-width: 768px){
-  .md\:mt-2{
-    margin-top: 0.5rem
-  }
-
-  .md\:block{
-    display: block
-  }
-
   .md\:flex{
     display: flex
   }
 
-  .md\:h-6{
-    height: 1.5rem
-  }
-
-  .md\:w-6{
-    width: 1.5rem
-  }
-
-  .md\:flex-row{
-    flex-direction: row
-  }
-
-  .md\:justify-normal{
-    justify-content: normal
-  }
-
-  .md\:justify-between{
-    justify-content: space-between
-  }
-
-  .md\:p-3{
-    padding: 0.75rem
-  }
-
-  .md\:pb-4{
-    padding-bottom: 1rem
-  }
-
   .md\:pl-6{
     padding-left: 1.5rem
+  }
+
+  .md\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1
   }
 
   .md\:text-7xl{
@@ -1466,13 +1177,28 @@ h2.section-title{
   }
 }
 
-@media ((min-width: 546px) and (max-width: 640px)){
+@media (min-width: 396px){
+  .xxs\:h-\[65dvh\]{
+    height: 65dvh
+  }
+}
+
+@media (min-width: 546px){
   .xs\:static{
     position: static
   }
 
+  .xs\:mb-5{
+    margin-bottom: 1.25rem
+  }
+
   .xs\:w-full{
     width: 100%
+  }
+
+  .xs\:text-5xl{
+    font-size: 3rem;
+    line-height: 1
   }
 
   .xs\:text-6xl{
@@ -1483,17 +1209,6 @@ h2.section-title{
   .xs\:text-lg{
     font-size: 1.125rem;
     line-height: 1.75rem
-  }
-}
-
-@media ((min-width: 396px) and (max-width: 546px)){
-  .xxs\:h-\[65dvh\]{
-    height: 65dvh
-  }
-
-  .xxs\:text-5xl{
-    font-size: 3rem;
-    line-height: 1
   }
 }
 
@@ -1523,12 +1238,6 @@ h2.section-title{
   }
 }
 
-@media (min-height: 1024px){
-  .lg-ptr\:w-1\/2{
-    width: 50%
-  }
-}
-
 @media (orientation: portrait){
   .portrait\:h-auto{
     height: auto
@@ -1539,53 +1248,10 @@ h2.section-title{
   }
 }
 
-.\[\&\>\*\:not\(\:first-child\)\]\:inline-block>*:not(:first-child){
-  display: inline-block
-}
-
-.\[\&\>\*\]\:h-fit>*{
-  height: -moz-fit-content;
-  height: fit-content
-}
-
-.\[\&\>div\]\:flex>div{
-  display: flex
-}
-
-.\[\&\>div\]\:w-44>div{
-  width: 11rem
-}
-
-.\[\&\>div\]\:flex-col>div{
-  flex-direction: column
-}
-
-.\[\&\>div\]\:items-center>div{
-  align-items: center
-}
-
-.\[\&\>div\]\:py-6>div{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem
-}
-
 .\[\&\>li\>a\:focus\]\:text-main-color\/100>li>a:focus{
   color: rgb(var(--main-theme)/ 1)
 }
 
 .\[\&\>li\>a\:hover\]\:text-main-color\/100>li>a:hover{
   color: rgb(var(--main-theme)/ 1)
-}
-
-.\[\&\>li\]\:block>li{
-  display: block
-}
-
-.\[\&\>li\]\:h-fit>li{
-  height: -moz-fit-content;
-  height: fit-content
-}
-
-.\[\&_a\]\:block a{
-  display: block
 }
